[gd_scene load_steps=29 format=1]

[ext_resource path="res://assets/street.png" type="Texture" id=1]
[ext_resource path="res://scripts/bg.gd" type="Script" id=2]
[ext_resource path="res://assets/uni-sans.thin-caps.fnt" type="BitmapFont" id=3]
[ext_resource path="res://freeknight/png/Attack (1).png" type="Texture" id=4]
[ext_resource path="res://freeknight/png/Attack (10).png" type="Texture" id=5]
[ext_resource path="res://freeknight/png/Attack (2).png" type="Texture" id=6]
[ext_resource path="res://freeknight/png/Attack (3).png" type="Texture" id=7]
[ext_resource path="res://freeknight/png/Attack (4).png" type="Texture" id=8]
[ext_resource path="res://freeknight/png/Attack (5).png" type="Texture" id=9]
[ext_resource path="res://freeknight/png/Attack (6).png" type="Texture" id=10]
[ext_resource path="res://freeknight/png/Attack (7).png" type="Texture" id=11]
[ext_resource path="res://freeknight/png/Attack (8).png" type="Texture" id=12]
[ext_resource path="res://freeknight/png/Attack (9).png" type="Texture" id=13]
[ext_resource path="res://freeknight/png/Run (1).png" type="Texture" id=14]
[ext_resource path="res://freeknight/png/Run (10).png" type="Texture" id=15]
[ext_resource path="res://freeknight/png/Run (2).png" type="Texture" id=16]
[ext_resource path="res://freeknight/png/Run (3).png" type="Texture" id=17]
[ext_resource path="res://freeknight/png/Run (4).png" type="Texture" id=18]
[ext_resource path="res://freeknight/png/Run (5).png" type="Texture" id=19]
[ext_resource path="res://freeknight/png/Run (6).png" type="Texture" id=20]
[ext_resource path="res://freeknight/png/Run (7).png" type="Texture" id=21]
[ext_resource path="res://freeknight/png/Run (8).png" type="Texture" id=22]
[ext_resource path="res://freeknight/png/Run (9).png" type="Texture" id=23]
[ext_resource path="res://assets/pp.smp" type="Sample" id=24]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "run",
"speed": 4.0
} ]

[sub_resource type="Animation" id=2]

resource/name = "run"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 73, 403.584 ), Vector2( 700, 403.584 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 10, 19 ]
}

[sub_resource type="Animation" id=3]

resource/name = "char"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ "Ой, а я - принц! Привет", "Хочешь чтобы я зашел в дверь?" ]
}

[sub_resource type="SampleLibrary" id=4]

samples/pp = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}

[node name="Background" type="TextureFrame"]

rect/scale = Vector2( 1.3, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 6.0
margin/right = 810.0
margin/bottom = 606.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="Author" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 136.0
margin/top = 38.0
margin/right = 639.0
margin/bottom = 92.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.851562, 0.265074, 0.12973, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MyKnight" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 731.408, 383.584 )
transform/scale = Vector2( 0.211987, 0.356583 )
frames = SubResource( 1 )
animation = "run"
frame = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="MyKnight"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "run"

[node name="Label" type="Label" parent="MyKnight"]

visibility/opacity = 2.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -2109.0
margin/top = -226.0
margin/right = -1177.0
margin/bottom = -144.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.980469, 0.00382996, 0.00382996, 1 )
custom_colors/font_color_shadow = Color( 0.980469, 0.00382996, 0.00382996, 1 )
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="textAnim" type="AnimationPlayer" parent="MyKnight/Label"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/char = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="HBoxContainer" type="HBoxContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 355.0
margin/top = 507.0
margin/right = 430.0
margin/bottom = 551.0
alignment = 0

[node name="YesButton" type="Button" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 34.0
margin/bottom = 44.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Yes"
flat = false

[node name="NoButton" type="Button" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 44.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "No"
flat = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 50.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="MyKnight/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="finished" from="MyKnight/Label/textAnim" to="." method="_on_textAnim_finished"]

[connection signal="pressed" from="HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]

[connection signal="pressed" from="HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]


